--- a/hybrideFrameworkProject/test-output/old/Suite/cart test.properties
+++ b/hybrideFrameworkProject/test-output/old/Suite/cart test.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=index page][SuiteResult context=about page][SuiteResult context=search page][SuiteResult context=cart test][SuiteResult context=login page][SuiteResult context=order page][SuiteResult context=whishlist]
+[SuiteResult context=login test][SuiteResult context=cart test][SuiteResult context= search  pagetest][SuiteResult context=order page test][SuiteResult context=home page test][SuiteResult context=about page test][SuiteResult context=wishlist page test][SuiteResult context=intex page test]
