--- a/hybrideFrameworkProject/test-output/old/Suite/wishlist page test.properties
+++ b/hybrideFrameworkProject/test-output/old/Suite/wishlist page test.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=index page test][SuiteResult context=About page test][SuiteResult context=search page test][SuiteResult context=cart check test][SuiteResult context=login page test][SuiteResult context=order page test][SuiteResult context=wishlist page test]
+[SuiteResult context=login test][SuiteResult context=cart test][SuiteResult context= search  pagetest][SuiteResult context=order page test][SuiteResult context=home page test][SuiteResult context=about page test][SuiteResult context=wishlist page test][SuiteResult context=intex page test]
